--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -1,37 +1,34 @@
-<div class="close">
-  <button mat-icon-button (click)="close()">
-    <mat-icon>close</mat-icon>
-  </button>
-</div>
-<div class="dialog">
-  <h2 class="dialog-title">Resumen de tu pedido:</h2>
+<div class="content">
+  <div class="close">
+    <button mat-icon-button (click)="close()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
+  <div class="dialog" *ngIf="cart.length == 0">
+    <p class="dialog-title">Tu carrito esta vacío</p>
+  </div>
+  <div class="dialog" *ngIf="cart.length > 0">
+    <p class="dialog-title">Resumen de tu pedido:</p>
 
-  <mat-dialog-content>
-    <div class="row">
-      <div class="col-6">
-        <p class="price">Producto</p>
+    <mat-dialog-content>
+      <div class="container-products">
+        <div class="products" *ngFor="let item of cart; index as i">
+          <div class="product-qty">
+            <p>{{ getQuantity(item.product_id) }}x {{ item.name }}</p>
+          </div>
+          <div class="price">
+            <p>
+              {{ item.price * getQuantity(item.product_id) | number : "1.2" }}€
+            </p>
+          </div>
+          <div class="papelera">
+            <i class="far fa-trash-alt fa-2x" (click)="removeItem(i)"></i>
+          </div>
+        </div>
       </div>
-      <div class="col-6">
-        <p class="price">Precio</p>
+      <div class="totales">
+        <p class="title">Total: {{ getTotal() | number : "1.2" }}€</p>
       </div>
-    </div>
-
-    <div class="row" *ngFor="let item of cart">
-      <div class="col-6">
-        <p class="price">{{ getQuantity(item.product_id) }}x {{ item.name }}</p>
-      </div>
-      <div class="col-6">
-        <p class="price">{{ item.price | number: '1.2' }}€</p>
-      </div>
-    </div>
-
-    <!-- <div class="row">
-      <div class="col-6">
-        <p class="price">Total</p>
-      </div>
-      <div class="col-6">
-        <p class="price">{{ total | number: '1.2' }}€</p>
-      </div>
-    </div> -->
-  </mat-dialog-content>
+    </mat-dialog-content>
+  </div>
 </div>
