--- a/src/app/pages/carrito/carrito.component.scss
+++ b/src/app/pages/carrito/carrito.component.scss
@@ -22,7 +22,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
+  font-size: calc(1.5rem + 1vw);
   color: $color-amarillo;
   font-family: $fuente-anteux;
   padding-bottom: 2rem;
@@ -40,25 +40,30 @@
   .products {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    font-family: "Heebo", sans-serif;
     .product-qty {
       display: flex;
-      justify-content: flex-start;
+      flex-basis: 50%;
       align-items: center;
       color: $color-blanco;
       margin-bottom: 0.8rem;
+      .qty {
+        color: $color-amarillo;
+      }
     }
     .price {
       display: flex;
-      justify-content: flex-end;
+      flex-basis: 30%;
       align-items: center;
       color: $color-blanco;
       margin-bottom: 0.8rem;
     }
     .papelera {
       display: flex;
-      justify-content: flex-start;
+      flex-basis: 10%;
+      justify-content: flex-end;
       color: $color-amarillo;
       padding-bottom: 0.8rem;
       margin-bottom: 0.8rem;
@@ -68,10 +73,37 @@
 }
 
 .totales {
+  margin: 1rem 0 2rem 0;
   .title {
     color: $color-blanco;
     font-family: $fuente-anteux;
     font-size: 1.5rem;
     margin-bottom: 0.8rem;
+  }
+}
+.pago {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  .boton-pago {
+    flex-grow: 1;
+  }
+
+  .btn {
+    padding: 0;
+    color: $color-negro;
+    background-color: $color-amarillo;
+    font-size: calc(0.8rem + 1vw);
+    font-family: $fuente-anteux;
+    margin: 1.5rem 0 1rem 0;
+    width: 100%;
+    border-radius: 10rem;
+  }
+
+  .btn:hover {
+    background-color: darken($color-amarillo, 10%);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   }
 }
