--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -16,11 +16,6 @@
       </div>
       <div class="order-md-3">
         <div class="d-flex">
-          <!-- <a *ngIf="isSessionActive" [routerLink]="['/perfil']">
-            <button mat-icon-button class="person">
-              <mat-icon>account_circle</mat-icon>
-            </button>
-          </a> -->
           <div class="dropdown">
             <button *ngIf="isSessionActive" mat-icon-button class="person dropbtn">
               <mat-icon>account_circle</mat-icon>
@@ -64,6 +59,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/reservas']" routerLinkActive="active">Reservas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/admin']" routerLinkActive="active">Admin</a>
           </li>
         </ul>
       </div>
