--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -20,16 +20,74 @@
 
   <!-- Contenido -->
   <mat-sidenav-content>
-    <div style="height: 60vh;">
+    <div style="height: 80vh;">
       <div *ngIf="showProductList">
         <h2>Lista de Productos</h2>
-        <ul>
-          <li *ngFor="let product of productList">
-            <h3>{{product.name}}</h3>
-            <p>{{product.description}}</p>
-            <p>{{product.price}}</p>
-          </li>
-        </ul>
+
+        <div class="main-body">
+          <mat-form-field color="accent">
+            <mat-label>Buscar producto</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Buscar producto" #input>
+          </mat-form-field>
+
+          <div class="mat-elevation-z8 table-container">
+            <table mat-table [dataSource]="dataSource" matSort>
+
+              <!-- ID Column -->
+              <ng-container matColumnDef="product_id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                <td mat-cell *matCellDef="let product"> {{product.product_id}} </td>
+              </ng-container>
+
+              <!-- Product Column -->
+              <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Producto </th>
+                <td mat-cell *matCellDef="let product"> {{product.name}} </td>
+              </ng-container>
+
+              <!-- Price Column -->
+              <ng-container matColumnDef="price">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Precio </th>
+                <td mat-cell *matCellDef="let product"> {{product.price | number:'1.2'}}€ </td>
+              </ng-container>
+
+              <!-- Category Column -->
+              <ng-container matColumnDef="category">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Categoría </th>
+                <td mat-cell *matCellDef="let product"> {{product.category}} </td>
+              </ng-container>
+
+              <!-- Description Column -->
+              <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Descripción </th>
+                <td mat-cell *matCellDef="let product"> {{product.description}} </td>
+              </ng-container>
+
+              <!-- Action Column -->
+              <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+                <td class="acciones" mat-cell *matCellDef="let product">
+                  <button mat-icon-button color="accent">
+                    <mat-icon>edit</mat-icon>
+                  </button>
+                  <button mat-icon-button color="warn">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+              <!-- Row shown when there is no matching data. -->
+              <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+              </tr>
+            </table>
+
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+          </div>
+        </div>
       </div>
       <div *ngIf="showOrderList">
         <h2>Lista de Pedidos</h2>
