--- a/src/app/pages/admin/admin.component.scss
+++ b/src/app/pages/admin/admin.component.scss
@@ -4,6 +4,7 @@ mat-toolbar-row {
   justify-content: space-between;
   background-color: #000;
   color: $color-amarillo;
+
   h1 {
 
     font-size: calc(1rem + 1vh);
@@ -12,4 +13,20 @@ mat-toolbar-row {
   .example-spacer {
     flex: 1 1 auto;
   }
+}
+
+.main-body {
+  margin: 0 auto;
+  padding-top: 20px;
+  max-width: 1248px;
+
+  mat-form-field {
+    width: 100%;
+  }
+
+  // .acciones {
+  //   display: flex;
+  //   align-items: center;
+  //   vertical-align: middle;
+  // }
 }
