--- a/src/app/pages/admin/dialog-producto/dialog-producto.component.html
+++ b/src/app/pages/admin/dialog-producto/dialog-producto.component.html
@@ -6,17 +6,17 @@
     <div class="row">
       <mat-form-field color="accent">
         <mat-label>Nombre</mat-label>
-        <input matInput type="text" placeholder="Nombre" formControlName="name">
+        <input matInput type="text" placeholder="Nombre" formControlName="name" required>
       </mat-form-field>
       <mat-form-field color="accent">
         <mat-label>Precio</mat-label>
-        <input matInput type="number" placeholder="Precio" formControlName="price">
+        <input matInput type="number" placeholder="Precio" formControlName="price" required>
       </mat-form-field>
     </div>
     <div class="row">
       <mat-form-field color="accent">
         <mat-label>Categoría</mat-label>
-        <mat-select formControlName="category">
+        <mat-select formControlName="category" required>
           <mat-option *ngFor="let val of categories" [value]="val">{{val}}</mat-option>
         </mat-select>
       </mat-form-field>
@@ -31,7 +31,7 @@
     </button>
   </div>
   <div mat-dialog-actions class="action">
-    <button mat-raised-button>Cancelar</button>
+    <button mat-raised-button type="button" (click)="close()">Cancelar</button>
     <button mat-raised-button color="accent" type="submit">Guardar</button>
   </div>
 </form>
