--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -5,7 +5,7 @@
     </button>
     <h1>Burger Anteux</h1>
     <span class="example-spacer"></span>
-    <button mat-raised-button *ngIf="showProductList" (click)="openAddEditProductDialog()">Añadir Producto</button>
+    <button class="btn" *ngIf="showProductList" (click)="openAddEditProductDialog()">Añadir Producto</button>
   </mat-toolbar-row>
 </mat-toolbar>
 
@@ -25,19 +25,13 @@
         <h2>Lista de Productos</h2>
 
         <div class="main-body">
-          <mat-form-field color="accent">
+          <mat-form-field color="accent" appearance="outline">
             <mat-label>Buscar producto</mat-label>
             <input matInput (keyup)="applyFilter($event)" placeholder="Buscar producto" #input>
           </mat-form-field>
 
           <div class="mat-elevation-z8 table-container">
             <table mat-table [dataSource]="dataSource" matSort>
-
-              <!-- ID Column -->
-              <ng-container matColumnDef="product_id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                <td mat-cell *matCellDef="let product"> {{product.product_id}} </td>
-              </ng-container>
 
               <!-- Product Column -->
               <ng-container matColumnDef="name">
@@ -65,14 +59,17 @@
 
               <!-- Action Column -->
               <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+                <th class="title-actions" mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
                 <td class="acciones" mat-cell *matCellDef="let product">
-                  <button mat-icon-button color="accent">
-                    <mat-icon>edit</mat-icon>
-                  </button>
-                  <button mat-icon-button color="warn">
-                    <mat-icon>delete</mat-icon>
-                  </button>
+                  <div>
+                    <button mat-icon-button color="accent" (click)="openEditProductDialog(product)">
+                      <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button color="warn" (click)="deleteProduct(product.product_id)">
+                      <mat-icon>delete</mat-icon>
+                    </button>
+
+                  </div>
                 </td>
               </ng-container>
 
@@ -81,7 +78,7 @@
 
               <!-- Row shown when there is no matching data. -->
               <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                <td class="mat-cell" colspan="4">No se han encontrado resultados de: "{{input.value}}"</td>
               </tr>
             </table>
 
