--- a/src/app/pages/admin/dialog-producto/dialog-producto.component.html
+++ b/src/app/pages/admin/dialog-producto/dialog-producto.component.html
@@ -32,6 +32,6 @@
   </div>
   <div mat-dialog-actions class="action">
     <button mat-raised-button type="button" (click)="close()">Cancelar</button>
-    <button mat-raised-button color="accent" type="submit">Guardar</button>
+    <button mat-raised-button color="accent" type="submit">{{data ? 'Actualizar' : 'Guardar'}}</button>
   </div>
 </form>
