--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -21,6 +21,8 @@
   <!-- Contenido -->
   <mat-sidenav-content>
     <div style="height: 80vh;">
+
+      <!-- LISTA DE PEDIDOS-->
       <div *ngIf="showProductList">
         <h2>Lista de Productos</h2>
 
@@ -86,15 +88,69 @@
           </div>
         </div>
       </div>
+
+      <!-- LISTA DE PEDIDOS-->
       <div *ngIf="showOrderList">
-        <h2>Lista de Pedidos</h2>
-        <ul>
-          <li *ngFor="let order of orderList">
-            <h3>{{order.order_id}}</h3>
-            <p>{{order.address}}</p>
-            <p>{{order.date}}</p>
-          </li>
-        </ul>
+        <h2>Lista de pedidos</h2>
+
+        <div class="main-body">
+          <mat-form-field color="accent" appearance="outline">
+            <mat-label>Nº de Pedido</mat-label>
+            <input matInput (keyup)="orderApplyFilter($event)" placeholder="Buscar pedido" #input>
+          </mat-form-field>
+
+          <div class="mat-elevation-z8 table-container">
+            <table mat-table [dataSource]="orderDataSource" matSort>
+
+              <!-- Nº pedido Column -->
+              <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nº Ped. </th>
+                <td mat-cell *matCellDef="let order"> {{order.order_id}} </td>
+              </ng-container>
+
+              <!-- Date Column -->
+              <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+                <td mat-cell *matCellDef="let order">{{ order.date | date:'dd/MM/yyyy HH:mm' }}</td>
+              </ng-container>
+
+              <!-- Quantity Column -->
+              <ng-container matColumnDef="quantity">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad </th>
+                <td mat-cell *matCellDef="let product"> {{product.category}} </td>
+              </ng-container>
+
+              <!-- Address Column -->
+              <ng-container matColumnDef="address">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Dirección </th>
+                <td mat-cell *matCellDef="let order"> {{order.address}} </td>
+              </ng-container>
+
+              <!-- Comments Column -->
+              <ng-container matColumnDef="comments">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Comentarios </th>
+                <td mat-cell *matCellDef="let order"> {{order.comments}} </td>
+              </ng-container>
+
+              <!-- Description Column -->
+              <ng-container matColumnDef="state">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
+                <td mat-cell *matCellDef="let order"> {{order.state}} </td>
+              </ng-container>
+
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
+
+              <!-- Row shown when there is no matching data. -->
+              <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No se han encontrado resultados de: "{{input.value}}"</td>
+              </tr>
+            </table>
+
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+          </div>
+        </div>
       </div>
     </div>
   </mat-sidenav-content>
