cambios en about, header, carrito y pago

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -17,13 +17,13 @@
                 </div>
                 <div class="col-md-6">
                     <img src="../../../assets/hamburguesas.jpg" alt="Imagen de hamburguesas"
-                        class="img-fluid rounded" />
+                        class="hamburguesas img-fluid rounded" />
                 </div>
             </div>
 
             <div class="row mt-5">
                 <div class="col-md-6">
-                    <h3>Nuestro producto estrella</h3>
+                    <h2>Nuestro producto estrella</h2>
                     <p>
                         La Burger Anteux es nuestra hamburguesa más emblemática, ya que
                         ofrece una carne sublime con una salsa muy especial. Además, como
@@ -36,16 +36,16 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <h3>Para el postre</h3>
+                    <h2>Para el postre</h2>
                     <p>
                         Te sugerimos nuestra especialidad que son unas tortitas que siempre
                         cautivan a los paladares más golosos. ¡Si quieres probar algo
                         diferente vive la experiencia de sabor que te proponemos desde
                         Anteux Burger!
                     </p>
-                    <div class="tortitas d-flex">
+                    <div class="tortitas">
                         <img src="../../../assets/TORTITAS.jpg" alt="Imagen de tortitas"
-                            class="img-fluid rounded mb-4" />
+                            class="postre img-fluid rounded mb-4" />
                     </div>
                 </div>
             </div>
@@ -55,9 +55,25 @@
                     Una de las principales señas de identidad que nos ha caracterizado
                     desde nuestros orígenes es la atención a nuestros clientes, por eso:
                 </p>
+                <div class="tarjetas">
+                    <div class="domicilio">
+                        <mat-icon>directions_car</mat-icon>
+                        <p>Llevamos tu pedido a domicilio en Pinto por tan solo 1,50€ más</p>
+                    </div>
+                    <div class="celiacos">
+                        <mat-icon>local_dining</mat-icon>
+                        <p>La mayoría de nuestra carta es apta para celiacos</p>
+                    </div>
+                    <div class="vegetarianos">
+                        <mat-icon>restaurant_menu</mat-icon>
+                        <p>Tenemos platos para veganos y vegetarianos</p>
+                    </div>
+                    <div class="reservas">
+                        <mat-icon>calendar_month</mat-icon>
+                        <p>Funcionamos con reservas de mesa para evitarte esperas</p>
+                    </div>
+                </div>
             </div>
-
-
         </div>
     </div>
 </div>
