--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -15,6 +15,8 @@
   min-width: 100%;
   .content {
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 .container {
@@ -22,10 +24,10 @@
   padding-bottom: 50px;
   text-align: justify;
 
-  h2,
-  h3 {
+  h2 {
     font-family: $fuente-anteux;
     color: white;
+    font-size: 3rem;
   }
 
   p {
@@ -33,13 +35,46 @@
   }
 
   .burguer {
-    width: 65%;
+    width: 60%;
     height: auto;
+    margin: 1rem 0 2rem 0;
+  }
+
+  .postre {
+    margin: 1rem 0 2rem 0;
   }
 
   .img-fluid {
     max-width: 100%;
     height: auto;
+  }
+
+  .tarjetas {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    div {
+      flex-basis: 45%;
+      padding: 1.5rem;
+      background-color: rgb(116, 116, 116, 0.5);
+      backdrop-filter: blur(8px);
+      border-radius: 1rem;
+      margin: 1rem;
+      display: flex;
+      align-items: center;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      p {
+        font-size: 1rem;
+        color: $color-blanco;
+        padding: 1rem 0 0 1.5rem;
+      }
+      mat-icon {
+        font-size: 2rem;
+        padding: 0 2.5rem 2.5rem 0;
+        color: $color-amarillo;
+      }
+    }
   }
 }
 
@@ -48,6 +83,10 @@
     margin: 2rem;
   }
   .row {
+    flex-direction: column;
+  }
+
+  .tarjetas {
     flex-direction: column;
   }
 }
