--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -1,4 +1,4 @@
-@import '/src/app/variables.scss';
+@import "/src/app/variables.scss";
 
 header {
   background-color: $color-negro;
@@ -6,8 +6,7 @@ header {
 }
 
 .logo {
-  margin-left: 5%;
-
+  margin-left: 2rem;
   img {
     width: 55px;
     height: 50%;
@@ -35,7 +34,6 @@ header {
   .nav-link.active {
     color: $color-amarillo;
   }
-
 }
 
 .nav-link {
@@ -45,7 +43,6 @@ header {
 .menu {
   color: $color-amarillo;
   border: none;
-
 }
 
 .menu:focus {
@@ -58,21 +55,20 @@ header {
   width: auto;
   height: auto;
   color: $color-amarillo;
-
 }
 
 .dropdown {
   position: relative;
   display: inline-block;
   .dropdown-content {
-    &.show{
+    &.show {
       display: block;
     }
     display: none;
     position: absolute;
     background-color: $color-negro;
     min-width: 100px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     a {
       display: flex;
@@ -84,15 +80,14 @@ header {
       padding: 10px;
       text-decoration: none;
       &:hover {
-         background-color: rgb(65, 65, 65);
-      } 
+        background-color: rgb(65, 65, 65);
+      }
     }
   }
   &:hover .dropdown-content {
     display: block;
   }
 }
-
 
 .carrito {
   display: flex;
