--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -114,11 +114,7 @@
                 <td mat-cell *matCellDef="let order">{{ order.date | date:'dd/MM/yyyy HH:mm' }}</td>
               </ng-container>
 
-              <!-- Quantity Column -->
-              <ng-container matColumnDef="quantity">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad </th>
-                <td mat-cell *matCellDef="let product"> {{product.category}} </td>
-              </ng-container>
+
 
               <!-- Address Column -->
               <ng-container matColumnDef="address">
@@ -126,18 +122,22 @@
                 <td mat-cell *matCellDef="let order"> {{order.address}} </td>
               </ng-container>
 
-              <!-- Comments Column -->
-              <ng-container matColumnDef="comments">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Comentarios </th>
-                <td mat-cell *matCellDef="let order"> {{order.comments}} </td>
-              </ng-container>
 
-              <!-- Description Column -->
+              <!-- State Column -->
               <ng-container matColumnDef="state">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
                 <td mat-cell *matCellDef="let order"> {{order.state}} </td>
               </ng-container>
 
+              <!-- Detalis Column -->
+              <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Detalles </th>
+                <td mat-cell *matCellDef="let order">
+                  <button mat-icon-button color="accent">
+                    <mat-icon>info</mat-icon>
+                  </button>
+                </td>
+              </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
