--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -131,7 +131,7 @@
               <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Detalles </th>
                 <td mat-cell *matCellDef="let order">
-                  <button mat-icon-button color="accent" (click)="openDetailsDialog(order.order_id)">
+                  <button mat-icon-button color="accent" (click)="openDetailsDialog(order)">
                     <mat-icon>info</mat-icon>
                   </button>
                 </td>
