ordenado de mas reciente a mas antiguio

--- a/src/app/pages/admin/dialog-detalles/dialog-detalles.component.html
+++ b/src/app/pages/admin/dialog-detalles/dialog-detalles.component.html
@@ -4,15 +4,19 @@
       <mat-icon>close</mat-icon>
     </button>
   </div>
-  <p class="dialog-title">Resumen de tu pedido:</p>
+  <p class="dialog-title">Detalles del pedido:</p>
 
   <mat-dialog-content>
     <div *ngFor="let detalle of listaDetalles">
       <ul>
         <li>
-          {{ detalle[0] }}x {{ detalle[1] }}
+          <span>{{ detalle[0] }}x</span> {{ detalle[1] }}
         </li>
       </ul>
+    </div>
+    <div class="observaciones">
+      <p class="titulo">Observaciones:</p>
+      <p class="comentario">{{ comment }}</p>
     </div>
   </mat-dialog-content>
 </div>
