--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -100,11 +100,11 @@
           </mat-form-field>
 
           <div class="mat-elevation-z8 table-container">
-            <table mat-table [dataSource]="orderDataSource" matSort>
+            <table mat-table [dataSource]="orderDataSource" #sort="matSort" matSort>
 
               <!-- Nº pedido Column -->
               <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nº Ped. </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nº Pedido </th>
                 <td mat-cell *matCellDef="let order"> {{order.order_id}} </td>
               </ng-container>
 
