--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -124,7 +124,16 @@
               <!-- State Column -->
               <ng-container matColumnDef="state">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
-                <td mat-cell *matCellDef="let order"> {{order.state}} </td>
+                <form>
+                  <td mat-cell *matCellDef="let order">
+                    <select name="" id="" [class.selected-state]="order.state === 'PENDING'"
+                      [ngClass]="isSelected(order)" (change)="updateOrderState($event, order)">
+                      <option value="IN_PROCESS" [selected]="order.state === 'IN_PROCESS'">Pendiente</option>
+                      <option value="DELIVERED" [selected]="order.state === 'DELIVERED'">Enviando</option>
+                      <option value="READY" [selected]="order.state === 'READY'">Entregado</option>
+                    </select>
+                  </td>
+                </form>
               </ng-container>
 
               <!-- Detalis Column -->
