--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,13 +19,15 @@ $BurgerAnteux-FrontEnd-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$BurgerAnteux-FrontEnd-theme: mat.define-light-theme((
-  color: (
-    primary: $BurgerAnteux-FrontEnd-primary,
-    accent: $BurgerAnteux-FrontEnd-accent,
-    warn: $BurgerAnteux-FrontEnd-warn,
+$BurgerAnteux-FrontEnd-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $BurgerAnteux-FrontEnd-primary,
+      accent: $BurgerAnteux-FrontEnd-accent,
+      warn: $BurgerAnteux-FrontEnd-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -34,8 +35,16 @@ $BurgerAnteux-FrontEnd-theme: mat.define-light-theme((
 @include mat.all-component-themes($BurgerAnteux-FrontEnd-theme);
 
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap");
 $color-negro: #161616;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Heebo', sans-serif;}
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Heebo", sans-serif;
+}
+/* Importing Bootstrap SCSS file. */
+@import "bootstrap/scss/bootstrap";
