--- a/src/app/pages/carta/carta.component.html
+++ b/src/app/pages/carta/carta.component.html
@@ -9,6 +9,10 @@
             (click)="changeCategory('ESPECIALIDADES')">Especialidades</button>
           <button type="button" class="btn m-1" [class.btn-selected]="selectedCategory === 'HAMBURGUESAS'"
             (click)="changeCategory('HAMBURGUESAS')">Hamburguesas</button>
+          <button type="button" class="btn m-1" [class.btn-selected]="selectedCategory === 'SANDWICHES'"
+            (click)="changeCategory('SANDWICHES')">Sandwiches</button>
+          <button type="button" class="btn m-1" [class.btn-selected]="selectedCategory === 'ENSALADAS'"
+            (click)="changeCategory('ENSALADAS')">Ensaladas</button>
           <button type="button" class="btn m-1" [class.btn-selected]="selectedCategory === 'BOCADILLOS'"
             (click)="changeCategory('BOCADILLOS')">Bocadillos</button>
           <button type="button" class="btn m-1" [class.btn-selected]="selectedCategory === 'PERRITOS'"
