pago con paypal implementado

--- a/src/app/pages/pago/pago.component.scss
+++ b/src/app/pages/pago/pago.component.scss
@@ -1,73 +1,167 @@
 @import "../../variables.scss";
-.pago-container {
-  height: 100%;
 
-  .title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 
-    h1 {
-      font-family: $fuente-anteux;
-      font-size: 3rem;
-      font-weight: bold;
-      color: $color-negro;
-      text-align: center;
+  h1 {
+    font-family: $fuente-anteux;
+    font-size: 3rem;
+    font-weight: bold;
+    color: $color-negro;
+    text-align: center;
+  }
+}
+
+h4 {
+  font-size: 1.8rem;
+  font-family: $fuente-anteux;
+  font-weight: bold;
+}
+
+.principal {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 1rem 10rem 1rem;
+
+  .resumen {
+    flex-basis: 60%;
+    .entrega {
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 1.5rem;
+      margin-bottom: 1rem;
+      background-color: $color-blanco;
+
+      .botones-entrega {
+        padding: 1rem;
+      }
+    }
+    .direccion {
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 1.5rem;
+      margin-bottom: 1rem;
+      background-color: $color-blanco;
+
+      .botones-direccion {
+        padding-top: 1rem;
+        .modificar {
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          cursor: pointer;
+          text-decoration: underline;
+          color: blue;
+        }
+        mat-form-field {
+          width: 100%;
+        }
+      }
+    }
+    .metodos-pago {
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 1.5rem;
+      margin-bottom: 1rem;
+      background-color: $color-blanco;
+
+      .botones-pago {
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+        i {
+          align-items: center;
+          font-size: 1.5rem;
+          margin: 1rem 0 0 1rem;
+        }
+      }
     }
   }
 
-  .principal {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 1rem 1rem 1rem;
+  .pago {
+    flex-basis: 38%;
     .resumen {
-      flex-basis: 60%;
-      .entrega {
-        border: 2px solid #000;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        padding: 1.5rem;
-        margin-bottom: 1rem;
-        h4 {
-          font-size: 1.5rem;
-          font-family: $fuente-anteux;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      padding: 1.5rem;
+      background-color: $color-blanco;
+
+      .coste {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 1rem 0 1rem;
+      }
+      .domicilio {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem;
+        margin-bottom: 0 1rem 1rem 1rem;
+      }
+      .total {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 1rem 0 1rem;
+        font-size: 1.2rem;
+      }
+      .iva {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding-left: 1rem;
+        p {
+          font-size: 12px;
+          font-weight: lighter;
         }
       }
-      .direccion {
-        border: 2px solid #000;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        padding: 1.5rem;
-        margin-bottom: 1rem;
-        h4 {
-          font-size: 1.5rem;
+      .finalizar {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        .boton-finalizar {
+          flex-grow: 1;
+        }
+
+        .btn {
+          padding: 0;
+          color: $color-amarillo;
+          background-color: $color-negro;
+          font-size: 1.8rem;
           font-family: $fuente-anteux;
+          margin: 1.5rem 0 1rem 0;
+          width: 100%;
+          border-radius: 10rem;
+          border: none;
+          &:hover {
+            transform: scale(1.05);
+            transition: ease-in-out 0.1s;
+          }
         }
       }
-      .metodos-pago {
-        border: 2px solid #000;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        padding: 1.5rem;
-        margin-bottom: 1rem;
-        h4 {
-          font-size: 1.5rem;
-          font-family: $fuente-anteux;
-        }
+      .terminos {
+        display: flex;
+        justify-content: center;
+        font-size: 12px;
+        font-weight: lighter;
+        text-align: center;
       }
     }
+  }
+}
 
+@media (max-width: 768px) {
+  .principal {
+    flex-direction: column;
+    .resumen {
+      flex-basis: 100%;
+    }
     .pago {
-      flex-basis: 38%;
-      .resumen {
-        border: 2px solid #000;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        padding: 1.5rem;
-        h4 {
-          font-size: 1.5rem;
-          font-family: $fuente-anteux;
-        }
-      }
+      flex-basis: 100%;
     }
   }
 }
