--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -13,15 +13,25 @@
   <!-- Menu lateral-->
   <mat-sidenav #sidenav opened="false">
     <mat-nav-list>
-      <a mat-list-item (click)="showProducts()">Productos</a>
-      <a mat-list-item (click)="showOrders()">Pedidos</a>
+      <a mat-list-item (click)="showProducts(); closeSidenav();">
+        <mat-icon>store</mat-icon>
+        PRODUCTOS ANTEUX
+      </a>
+      <a mat-list-item (click)="showOrders(); closeSidenav()">
+        <mat-icon>shopping_bag</mat-icon>
+        LISTADO PEDIDOS
+      </a>
+      <a class="salir" (click)="cerrarSesion()">
+        <mat-icon>logout</mat-icon>
+        Salir
+      </a>
+
     </mat-nav-list>
   </mat-sidenav>
 
   <!-- Contenido -->
   <mat-sidenav-content>
-    <div style="height: 80vh;">
-
+    <div>
       <!-- LISTA DE PEDIDOS-->
       <div *ngIf="showProductList">
         <h2>Lista de Productos</h2>
