--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -60,7 +60,7 @@
             <a class="nav-link" [routerLink]="['/about']" routerLinkActive="active">Sobre nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/admin']" routerLinkActive="active">Admin</a>
+            <a *ngIf="isAdmin" class="nav-link" [routerLink]="['/admin']" routerLinkActive="active">Admin</a>
           </li>
         </ul>
       </div>
