--- a/src/app/pages/pago/pago.component.scss
+++ b/src/app/pages/pago/pago.component.scss
@@ -78,6 +78,29 @@ h4 {
         }
       }
     }
+
+    .comentarios {
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 1.5rem;
+      margin-bottom: 1rem;
+      background-color: $color-blanco;
+
+      p {
+        padding-left: 1.5rem;
+        margin: 1rem 0 0 0;
+      }
+
+      .botones-comentarios {
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+        i {
+          align-items: center;
+          font-size: 1.5rem;
+          margin: 1rem 0 0 1rem;
+        }
+      }
+    }
   }
 
   .pago {
@@ -88,67 +111,90 @@ h4 {
       background-color: $color-blanco;
 
       .coste {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem 1rem 0 1rem;
-      }
-      .domicilio {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem;
-        margin-bottom: 0 1rem 1rem 1rem;
-      }
-      .total {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem 1rem 0 1rem;
-        font-size: 1.2rem;
-      }
-      .iva {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        padding-left: 1rem;
-        p {
-          font-size: 12px;
-          font-weight: lighter;
-        }
-      }
-      .finalizar {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        .boton-finalizar {
-          flex-grow: 1;
-        }
-
-        .btn {
-          padding: 0;
-          color: $color-amarillo;
-          background-color: $color-negro;
-          font-size: 1.8rem;
-          font-family: $fuente-anteux;
-          margin: 1.5rem 0 1rem 0;
-          width: 100%;
-          border-radius: 10rem;
-          border: none;
-          &:hover {
-            transform: scale(1.05);
-            transition: ease-in-out 0.1s;
+        .container-products {
+          margin-top: 2rem;
+          .carrito {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 1rem 0 1rem;
+            margin: 0 1rem 0 1rem;
+            font-family: "Heebo", sans-serif;
+            .product-qty {
+              display: flex;
+              align-items: center;
+              color: $color-negro;
+              margin-bottom: 0.8rem;
+              .qty {
+                color: $color-negro;
+              }
+            }
+            .price {
+              display: flex;
+              align-items: center;
+              color: $color-negro;
+              margin-bottom: 0.8rem;
+            }
           }
         }
-      }
-      .terminos {
-        display: flex;
-        justify-content: center;
-        font-size: 12px;
-        font-weight: lighter;
-        text-align: center;
+        .domicilio {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 0 1rem 0 1rem;
+          margin: 0 1rem 1rem 1rem;
+        }
+        .total {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 1rem 1rem 0 1rem;
+          font-size: 1.2rem;
+        }
+        .iva {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          padding-left: 1rem;
+          p {
+            font-size: 12px;
+            font-weight: lighter;
+          }
+        }
+        .finalizar {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          .boton-finalizar {
+            flex-grow: 1;
+          }
+
+          .btn {
+            padding: 0;
+            color: $color-amarillo;
+            background-color: $color-negro;
+            font-size: 1.8rem;
+            font-family: $fuente-anteux;
+            margin: 1.5rem 0 1rem 0;
+            width: 100%;
+            border-radius: 10rem;
+            border: none;
+            &:hover {
+              transform: scale(1.05);
+              transition: ease-in-out 0.1s;
+            }
+          }
+        }
+        .terminos {
+          display: flex;
+          justify-content: center;
+          font-size: 12px;
+          font-weight: lighter;
+          text-align: center;
+        }
       }
     }
   }
