--- a/src/app/pages/pedido/pedido.component.scss
+++ b/src/app/pages/pedido/pedido.component.scss
@@ -46,9 +46,8 @@
       margin-bottom: auto;
       background-color: $color-negro;
 
-      .spacer {
-        margin-right: 0 auto;
-        /* Ajusta el valor según el espacio deseado */
+      .state {
+        color: #fff;
       }
 
       span {
