pruebas con la imagen

--- a/src/app/pages/product/product/product.component.html
+++ b/src/app/pages/product/product/product.component.html
@@ -1,7 +1,5 @@
 <div class="card h-100 m-1" style="width:250px">
-  <img class="card-img-top"
-    src="https://media.istockphoto.com/id/1206323282/es/foto/hamburguesa-jugosa-sobre-fondo-blanco.jpg?s=612x612&w=0&k=20&c=r2mLaVFZxtRk4MeKpdQLtwTkcctyOpGEP-OxPeyo4_c="
-    alt="Hamburguesa" style="width:100%">
+  <img class="card-img-top" src="./../../../../assets/bocata.jpg" alt="Hamburguesa" style="width:100%">
   <div class="card-body">
     <h4 class="card-title">{{product.name}}</h4>
     <p class="card-text">{{product.description}}</p>
