--- a/src/app/pages/pedido/pedido.component.html
+++ b/src/app/pages/pedido/pedido.component.html
@@ -15,7 +15,8 @@
         </div>
       </div>
       <mat-list-item class="date">
-        <span class="state"> Estado:</span><span [ngStyle]="{'color': getColorForState(order.state)}"> {{ order.state }}</span>
+        <span class="state"> Estado:</span><span [ngStyle]="{'color': getColorForState(order.state)}">
+          {{ order.state }}</span>
       </mat-list-item>
     </mat-list>
     <div class="repetirPedido">
