--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -80,6 +80,7 @@ header {
       color: $color-amarillo;
       padding: 10px;
       text-decoration: none;
+      cursor: pointer;
       &:hover {
         background-color: rgb(65, 65, 65);
       }
