--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -44,7 +44,7 @@
                         Anteux Burger!
                     </p>
                     <div class="tortitas">
-                        <img src="../../../assets/TORTITAS.jpg" alt="Imagen de tortitas"
+                        <img src="../../../assets/tortitas.jpg" alt="Imagen de tortitas"
                             class="postre img-fluid rounded mb-4" />
                     </div>
                 </div>
