--- a/src/app/pages/product/product/product.component.html
+++ b/src/app/pages/product/product/product.component.html
@@ -1,5 +1,5 @@
 <div class="card h-100 m-1" style="width:250px">
-  <img class="card-img-top" [src]="product.image" alt="{{product.name}}" style="width:100%; height: auto">
+  <img class="card-img-top" [src]="product.image" alt="{{product.name}}">
   <div class="card-body">
     <h4 class="card-title">{{product.name}}</h4>
     <p class="card-text">{{product.description}}</p>
