--- a/src/app/pages/product/product/product.component.scss
+++ b/src/app/pages/product/product/product.component.scss
@@ -28,6 +28,12 @@
   color: #fff;
 }
 
+.card-img-top {
+  width: 100%;
+  height: 195px;
+  object-fit: cover;
+}
+
 .card-text {
   flex-grow: 1;
 }
